# super-auto-pets-ai-rust

./: .gitignore  Cargo.toml  README.md  build.rs
src/: build.rs  lib.rs  main.rs
