[package]
name = "super-auto-pets-ai"
version = "0.1.2"
edition = "2021"
description = "Super Auto Pets AI, built with Rust"
authors = ["Kevin Wu"]
license = "MIT"
repository = "https://github.com/Exaphis/super-auto-pets-ai-rust"
homepage = "https://github.com/Exaphis/super-auto-pets-ai-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "super_auto_pets_ai"
path = "src/main.rs"